fix reward button text vertical align (#693)

--- a/source/css/_common/components/post/post-reward.styl
+++ b/source/css/_common/components/post/post-reward.styl
@@ -15,6 +15,8 @@
   display: inline-block;
   width: 80px;
   height: 35px;
+  line-height: 35px;
+  vertical-align: text-top;
   border-radius: 5px;
   color: #fff;
   font-weight: 400;
